kubernetes/manifests/prometheus-mac.yml
apiVersion: v1
kind: Namespace
metadata:
  name: loren-dev-bg

---
apiVersion: v1
kind: Service
metadata:
  name: pcfgosampleappk8ssvc-prometheus-service
  namespace: loren-dev-bg
spec:
  selector:
    app: prometheus-pcfgosampleappk8ssvc
  type: LoadBalancer
  ports:
    - port: 8085
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcfgosampleappk8ssvc-prometheus-deployment
  namespace: loren-dev-bg
  annotations:
    harness.io/direct-apply: true
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus-pcfgosampleappk8ssvc
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.6.0
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-pcfgosampleappk8ssvc-conf

        - name: prometheus-storage-volume
          emptyDir: {}
  selector:
    matchLabels:
      app: prometheus-pcfgosampleappk8ssvc
