kubernetes/manifests/canary-ingress.yaml
# harness.io/skip-file-for-deploy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: loren-dev-bg
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50" # % traffic to canary
spec:
  ingressClassName: nginx
  rules:
    - host: pcfgosampleappk8ssvc-svc-stage
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pcfgosampleappk8ssvc-svc-stage
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pcfgosampleappk8ssvc-svc
                port:
                  number: 80
            # This second backend is your "canary" or new version
